# funar

./: .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  Dockerfile  README.md  cabal.project  flake.nix  shell.nix  vorkurs.rkt  ~$intro.pptx
.devcontainer/: Dockerfile  devcontainer.json
BASIC/: default.nix
BASIC/Language/BASIC/: Parser.hs
BASIC/examples/: Infinity.hs
cards/: cards.cabal  default.nix
cards/app/: Orphans.hs  PlayerServer.hs  TableServer.hs
cards/src/: Concurrency.hs  EventSourcing.hs  Game.hs  GameMike.hs  Player.hs  Sync.hs
docker-ghcide/: Dockerfile
dsl/BASIC/: BASIC.cabal  default.nix
dsl/BASIC/Language/BASIC/: Parser.hs
dsl/BASIC/examples/: Func.hs  Hello.hs  HiLo.hs  Infinity.hs
dsl/haskell/BASIC/examples/: Func.hs  Makefile
elm-architecture-tutorial/examples/: HeartsGame.elm
fallstudie/: TinyWM.hs  TinyWMProperties.hs  TinyWMZ.hs
funktionale-anforderungen/: ContractMike.hs  Effect.hs  default.nix  funktionaleanforderungen.cabal
funktionale-anforderungen/dsl/haskell/BASIC/Language/: BASIC.hs
funktionale-anforderungen/dsl/haskell/BASIC/Language/BASIC/: Interp.hs  Types.hs
handout/: TypeClasses.hs  TypeClasses.scala  notes.org  notes.txt  stephans-notizen.md
haskell-code/: Intro.hs  JsonDecode.hs  Main.hs  TinyWMProperties.hs  default.nix  funar-code.cabal  funar.cabal  haskell-code.cabal  hie.yaml  shell.nix
haskell-code-mike/: ALaCarte.hs  Cards.hs  Contract.hs  Contracts.hs  DB.hs  Diagram.hs  Effects.hs  Free.hs  FrenchCards.hs  Intro.hs  Optional.hs  Queue.hs  Roman.hs  ST.hs  State.hs  TinyWM.hs  Validation.hs  default.nix  funar-code.cabal  hie.yaml
haskell-code-mike/.devcontainer/: devcontainer.json
haskell-code/.devcontainer/: Dockerfile  devcontainer.json
haskell-code/Mike/: Contract.hs  DB.hs  Effect.hs  Intro.hs
hearts/: cards.cabal  docker-shell.sh  hearts.cabal  hie.yaml  shell.nix
hearts-frontend/: README.md  elm-tooling.json  elm.json  index.html  shell.nix
hearts-frontend/elm-stuff/0.19.0/: HeartsFrontend.elmi  HeartsFrontend.elmo  HeartsGame.elmi  HeartsGame.elmo  HeartsJson.elmi  HeartsJson.elmo  Main.elmi  Main.elmo  Shuffle.elmi  Shuffle.elmo
hearts-frontend/elm-stuff/0.19.1/: HeartsFrontend.elmi  HeartsFrontend.elmo  HeartsGame.elmi  HeartsGame.elmo  HeartsJson.elmi  HeartsJson.elmo  Shuffle.elmi  Shuffle.elmo
hearts-frontend/examples/: 09-hearts-player-stacks.diff  HeartsGame.elm  HeartsJson.elm
hearts-frontend/src/: HeartsFrontend.elm  HeartsGame.elm  HeartsJson.elm  Shuffle.elm
hearts-frontend/tests/: HeartsJsonTest.elm
hearts-mike/: build.sbt  docker-shell.sh  hearts.cabal  hie.yaml  notes.org  run-game-servers.sh  shell.nix
hearts-mike/.devcontainer/: Dockerfile
hearts-mike/app/: Args.hs
hearts-mike/src/: Cards.hs  Concurrency.hs  DB.hs  EventSourcing.hs  Game.hs  Game.hs-gameOver-Maybe.diff  Game.hs-playerNext.diff  Game.hs-zipper.diff  GameEvent.hs  GameIO.hs  HeartsJson.hs  NonEmpty.patch  Player.hs  PlayerIO.hs  Sync.hs  Table.hs  TableEventSourcing.hs  Teletype.hs  Zipper.hs
hearts-mike/src/Json/: Decode.hs
hearts-mike/src/main/scala/funar/hearts/: Cards.scala  Game.scala  GameEvent.scala  GameIO.scala  HeartsJson.scala  Player.scala  PlayerIO.scala  Table.scala  Teletype.scala
hearts-mike/src/main/scala/funar/json/: Decode.scala
hearts-mike/test/: HeartsJsonSpec.hs
hearts-scala/: README.org  build.sbt
hearts-scala-mike/: build.sbt
hearts/.devcontainer/: Dockerfile  devcontainer.json
hearts/app/: PlayerServer.hs  Serialization.hs  TableServer.hs
hearts/src/: Cards.hs  Concurrency.hs  EventSourcing.hs  Free.hs  Game.hs  Game.hs-playerNext.diff  GameEvent.hs  GameIO.hs  HeartsJson.hs  Player.hs  PlayerIO.hs  State.hs  Sync.hs  Table.hs  TableIO.hs  Zipper.hs
hearts/src/Json/: Decode.hs
hearts/src/Mike/: EventSourcing.hs
hearts/src/main/scala/funar/hearts/: GameEvent.scala  Sync.scala  Teletype.scala
hearts/test/: HeartsJsonSpec.hs
java-code/src/de/ag/: Animal.java  Dillo.java  Functor.java  Optional.java  Parrot.java
java/src/funar/: ShowerProduct.java
johannes/.devcontainer/: Dockerfile
johannes/haskell-code/: Cards.hs  Contract.hs  DB.hs  Intro.hs  entries.db  haskell-code.cabal
johannes/hearts/: hearts.cabal
johannes/hearts-frontend/src/: HeartsFrontend.elm
johannes/hearts/app/: PlayerServer.hs  TableServer.hs
johannes/hearts/src/: Cards.hs  GameEvent.hs  Player.hs  PlayerIO.hs  Sync.hs  Table.hs  TableIO.hs
johannes/hearts/src/Json/: Decode.hs
mike/: .gitignore  cabal.project  flake.nix  shell.nix
mike/.devcontainer/: devcontainer.json
mike/haskell-code/: Cards.hs  Contract.hs  DB.hs  Free.hs  Intro.hs  JsonDecode.hs  Mike.hs  TinyWM.hs  TinyWMProperties.hs  Validation.hs  Vec.hs  haskell-code.cabal
mike/hearts/: hearts.cabal
mike/hearts/app/: Args.hs  Main.hs  PlayerServer.hs  TableServer.hs
mike/hearts/src/: Cards.hs  Concurrency.hs  Free.hs  GameEvent.hs  HeartsJson.hs  Player.hs  Shuffle.hs  StatePlayer.hs  StateTtyPlayer.hs  Sync.hs  Table.hs  Teletype.hs
mike/hearts/src/Json/: Decode.hs
mike/hearts/test/: HeartsJsonSpec.hs  Spec.hs  TableSpec.hs
mike/hearts/test/Json/: DecodeSpec.hs
mike/scripts/: build-devcontainer.sh
model-view-update/: package-lock.json
model-view-update/examples/: 09-hearts.elm  HeartsJson.elm
scala-code-mike/: build.sbt
scala-code-mike/src/main/scala/funar/: Cards.scala  Contracts.scala  Free.scala  Intro.scala  Monads.scala  Monoid.scala
scala-mike/: build.sbt
scripts/: build-devcontainer.sh  build_and_publish_docker_images.sh  run-game-servers.sh
systemstruktur/: DBMike.hs  EffectMike.hs  IntroMike.hs  ListMike.hs  TicTacToe.hs  TicTacToeMike.hs  default.nix  systemstruktur.cabal
vorkurs/: Untitled.rkt  acc.rkt  animal.rkt  animals.rkt  data.rkt  image.rkt  images.rkt  intro.rkt  lens.rkt  listr.rkt  macro.rkt  properties.rkt  rev.rkt  reverse.rkt  river.rkt  shape.rkt  shapes.rkt  shower.rkt  tail.rkt  vorkurs1.rkt  vorkurs2.rkt
vorkurs-marco/: Image.rkt  animal.rkt  rev.rkt  river.rkt
xmonad/: TinyWM.hs  TinyWMZ.hs  fallstudie.cabal
(+35 files in other folders)
