cabal-version:       2.4
-- Initial package description 'funktionaleanforderungen.cabal' generated
-- by 'cabal init'.  For further documentation, see
-- http://haskell.org/cabal/users-guide/

name:                funktionaleanforderungen
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             NONE
author:              Mike Sperber
maintainer:          michael.sperber@active-group.de
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.12.0.0,
                       sqlite-simple >= 0.4.16.0,
                       containers >= 0.6.0.1,
                       text >= 1.2.3.1
  -- hs-source-dirs:
  default-language:    Haskell2010

  exposed-modules: Contract, DB
