cabal-version:       2.4
-- Initial package description 'funktionaleanforderungen.cabal' generated
-- by 'cabal init'.  For further documentation, see
-- http://haskell.org/cabal/users-guide/

name:                funktionaleanforderungen
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             NONE
author:              Mike Sperber
maintainer:          michael.sperber@active-group.de
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.9.0,
                       sqlite-simple >= 0.4.16,
                       text >= 1.2.0
  -- hs-source-dirs:
  default-language:    Haskell2010

  exposed-modules: 
