cabal-version:       2.4
name:                funar-code
version:             0.1.0.0
license:             NONE
author:              Mike Sperber
maintainer:          michael.sperber@active-group.de

library
  build-depends:       QuickCheck >= 2.12.6.1,
                       base >=4.12.0.0,
                       containers >= 0.6.0.1,
                       parallel >= 3.2.2.0,
                       sqlite-simple >= 0.4.16.0,
                       text >= 1.2.3.1

  -- hs-source-dirs:
  default-language:    Haskell2010

  exposed-modules: Intro

