cabal-version:       2.4

name:                hearts

version:             0.1.0.0

author:              Mike Sperber
maintainer:          michael.sperber@active-group.de

library
  exposed-modules: Cards, GameEvent, Table, Sync, EventSourcing, TableEventSourcing, Player
  other-modules: Teletype, Concurrency, Shuffle, MVar, PolysemyUtil
  
  build-depends:       base
                     , cond
                     , containers
                     , random
                     , polysemy == 1.3.0.0, polysemy-plugin == 0.2.5.2

  hs-source-dirs:      src

  default-language:    Haskell2010


executable server
  buildable:           False
  main-is:             Main.hs

  other-modules: Args, Serialization, PlayerServer, TableServer

  build-depends:       base
                     , aeson
                     , hearts
                     , mtl
                     , optparse-applicative
                     , servant
                     , servant-server
                     , servant-options
                     , wai
                     , wai-cors
                     , warp
                     , containers
                     , polysemy == 1.3.0.0, polysemy-plugin == 0.2.5.2


  hs-source-dirs:      app

  default-language:    Haskell2010
