cabal-version:       2.4
name:                hearts
version:             0.1.0.0
author:              Mike Sperber
maintainer:          michael.sperber@active-group.de

library
  exposed-modules:     Cards
                     , GameEvent
--                     , HeartsJson
--                     , Json.Decode
--                     , Player
--                     , PlayerIO
--                     , Game
--                     , GameIO
--                     , Sync
                     , Table
  other-modules:       MVar
                     , Shuffle
                     , Teletype
  build-depends:       base
                     , aeson < 2.0
                     , cond
                     , containers
                     , either
                     , polysemy
                     , polysemy-plugin
                     , polysemy-zoo >= 0.7
                     , random
                     , scientific
                     , text
                     , unordered-containers
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010

executable server
  buildable:           False
  main-is:             Main.hs
  other-modules:       Args
                     , PlayerServer
                     , TableServer
  build-depends:       base
                     , aeson < 2.0
                     , containers
                     , hearts
                     , mtl
                     , optparse-applicative
                     , polysemy
                     , polysemy-plugin
                     , polysemy-zoo >= 0.7
                     , servant
                     , servant-options
                     , servant-server
                     , wai
                     , wai-cors
                     , warp
  hs-source-dirs:      app
  default-language:    Haskell2010

test-suite heart-spec
  buildable:           False
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       HeartsJsonSpec
                     , Json.DecodeSpec
  hs-source-dirs:      test
  build-depends:       base
                     , QuickCheck
                     , aeson < 2.0
                     , bytestring
                     , containers
                     , either
                     , hearts
                     , hspec
  default-language:    Haskell2010
